configuration de vite pour le multi pages

--- a/src/form/form.html
+++ b/src/form/form.html
@@ -6,7 +6,7 @@
 		<title>Blog</title>
 	</head>
 	<body>
-		<a href="./form/form.html">Formulaire</a>
-		<script type="module" src="index.js"></script>
+		<a href="../">Accueil</a>
+		<script type="module" src="./form.js"></script>
 	</body>
 </html>
