--- a/src/form/form.html
+++ b/src/form/form.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<a href="../">Accueil</a>
+		<img src="/assets/images/uneimage.png" />
 		<script type="module" src="./form.js"></script>
 	</body>
 </html>
