mise en page du projet

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,11 @@
 		/>
 	</head>
 	<body>
-		<a href="./form/form.html">Formulaire</a>
-		<img src="/assets/images/uneimage.png" />
+		<div class="container">
+			<header>header</header>
+			<div class="content"></div>
+			<footer></footer>
+		</div>
 		<script type="module" src="index.js"></script>
 	</body>
 </html>
