--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,23 @@
 	</head>
 	<body>
 		<div class="container">
-			<header>header</header>
+			<header>
+				<a href="./index.html" class="header-brand">Blog</a>
+				<ul>
+					<li>
+						<a href="./index.html" class="header-nav active"
+							>Accueil</a
+						>
+					</li>
+					<li>
+						<a href="./form/form.html" class="header-nav"
+							>Créer un article</a
+						>
+					</li>
+				</ul>
+			</header>
 			<div class="content"></div>
-			<footer></footer>
+			<footer>© blog</footer>
 		</div>
 		<script type="module" src="index.js"></script>
 	</body>
