--- a/src/form/form.html
+++ b/src/form/form.html
@@ -4,10 +4,51 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Blog</title>
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
-		<a href="../">Accueil</a>
-		<img src="/assets/images/uneimage.png" />
+		<div class="container">
+			<header>
+				<a href="../index.html" class="header-brand">Blog</a>
+				<ul>
+					<li>
+						<a href="../index.html" class="header-nav">Accueil</a>
+					</li>
+					<li>
+						<a href="./form.html" class="header-nav active"
+							>Créer un article</a
+						>
+					</li>
+				</ul>
+			</header>
+			<div class="content">
+				<form>
+					<h2 class="title-underline">Ajouter un article</h2>
+					<div class="form-group">
+						<label>Auteur</label>
+						<input type="text" name="author" />
+					</div>
+					<div class="form-group">
+						<label>Categorie</label>
+						<input type="text" name="Category" />
+					</div>
+					<div class="form-group">
+						<label>Article</label>
+						<textarea name="content" id=""></textarea>
+					</div>
+					<div class="form-btn-container">
+						<button class="btn btn-secondary">Annuler</button>
+						<button class="btn btn-primary">Sauvegarder</button>
+					</div>
+				</form>
+			</div>
+			<footer>© blog</footer>
+		</div>
 		<script type="module" src="./form.js"></script>
 	</body>
 </html>
