mise en page de la liste des articles

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,44 @@
 					</li>
 				</ul>
 			</header>
-			<div class="content"></div>
+			<div class="content">
+				<div class="articles-container">
+					<div class="article">
+						<img
+							src="https://randomuser.me/api/portraits/men/76.jpg"
+							alt="profile"
+						/>
+						<h2>titre de l'article</h2>
+						<p class="article-author">tintin et milou</p>
+						<p class="article-content">
+							La famille Bonaparte vit à Ajaccio, rue Malerba (rue
+							de la Mauvaise-Herbe, aujourd'hui rue
+							Saint-Charles), dans une petite maison
+							traditionnelle du XVIIIe siècle, que Napoléon
+							qualifiera lui-même de « misérable ». La Casa
+							Buonaparte est habitée au rez-de-chaussée et au
+							premier étage par les Bonaparte et au deuxième étage
+							par leurs cousins, les Pozzo di Borgo. Ce voisinage
+							est insupportable et les deux familles vivent dans
+							une brouille continuelle. On raconte qu'un jour, une
+							Pozzo di Borgo aurait jeté le contenu d'un pot de
+							chambre par la fenêtre, sur Madame Letizia[8]. Les
+							Bonaparte ne sont pas une famille riche. Dans ce
+							milieu rural, les ressources matérielles de la
+							famille sont essentiellement fondées sur les
+							récoltes et les échanges. À l'école, Bonaparte est
+							un enfant turbulent et bagarreur avec ses camarades,
+							mais sera très vite reconnu comme étant un enfant
+							avec de grandes capacités, notamment pour le
+							calcul[réf. nécessaire].
+						</p>
+						<div class="article-actions">
+							<button class="btn btn-danger">Supprimer</button>
+							<button class="btn btn-primary">Modifier</button>
+						</div>
+					</div>
+				</div>
+			</div>
 			<footer>© blog</footer>
 		</div>
 		<script type="module" src="index.js"></script>
